--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
-project(camera_example)
+project(filter)
 
 find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
-  sensor_msgs
+  geometry_msgs
   message_generation
 )
 
@@ -13,11 +13,12 @@ add_message_files(
 
 add_service_files(
   FILES
+  GetPositionService.srv
 )
 
 generate_messages(
   DEPENDENCIES
-  sensor_msgs
+  geometry_msgs
 )
 
 catkin_package(
