--- a/package.xml
+++ b/package.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0"?>
 <package>
-  <name>camera_example</name>
+  <name>filter</name>
   <version>0.0.0</version>
-  <description>A package for printing the hand cameras to the face</description>
+  <description>A package for implementing a kalman filter</description>
   <license>BSD</license>
   <maintainer email="cps232@cornell.edu">Christopher Silvia</maintainer>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
 </package>
