--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>filter</name>
+  <name>kalman_filter</name>
   <version>0.0.0</version>
   <description>A package for implementing a kalman filter</description>
   <license>BSD</license>
